--- a/main-style.css
+++ b/main-style.css
@@ -2,6 +2,7 @@
 
 /* #0.1 Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Electrolize&display=swap') /*Electro Font*/;
+@import url('https://fonts.googleapis.com/css2?family=Electrolize&family=Inter:wght@300;400;700;800&display=swap'); /*Inter font*/
 
 /* #1 General Style */
 * {
@@ -14,7 +15,7 @@ body {
   width: 100vw;
   max-width: 100vw;
   min-height: 100vh;
-  font-family: 'Electrolize', sans-serif;
+  font-family: 'Inter', sans-serif;
   background: #002B38;
   color: aliceblue;
 }
@@ -28,7 +29,7 @@ html {
     --btn-color: /*#6369D1*/ #f67e7d;
   }
 
-/* #2 Containers */
+/* #3 Containers */
 .large-container-flex {
     width: 100vw;
     height: 100vh;
@@ -39,7 +40,80 @@ html {
     justify-content: center;
 }
 
-/* #3 Main Section */
+.medium-container-flex {
+    width: 100vw;
+    height: 70vh;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+/* #4 Header Section */
+header {
+    background: var(--main-palette-color);
+    color: var(--main-font-color);
+    width: 100vw;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    height: 10vh;
+    min-height: 50px;
+    max-height: 70px;
+    font-size: 18px;
+  }
+  
+  .header-section {
+    background: #dddddd;
+    width: 85% !important;
+    height: 10vh;
+    min-height: 50px;
+    max-height: 70px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 2em 0 2em;
+    /*   margin: 1em; */
+    border-radius: 50px;
+    position: fixed;
+    top: 1em;
+    background: rgba(255, 255, 255, 0.4);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+  }
+  
+  /* #2.1 Header Logo */
+  .header-section__logo img {
+    width: 5em;
+    height: auto;
+    max-height: 100px;
+  }
+  
+  /* #2.2 Header Nav */
+  .header-section__nav {
+    width: 30%;
+    height: 100%;
+    max-width: 500px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+  
+  .header-section__nav a {
+    color: var(--main-font-color);
+    text-decoration: none;
+  }
+
+/* #5 Main Section */
 main {
     width: 100vw;
     height: auto;
@@ -51,10 +125,17 @@ main {
 }
 
 /* #3.1 Introductory Section */
-.introductory-card {
+.introductory-section {
     background-color: var(--main-palette-color);
+    font-family: 'Electrolize', sans-serif;
 }
 
 .introductory-card-img {
     background-image: url(./assets/wallpapers/introductory-bg.png);
+}
+
+footer {
+    width: 100vw;
+    height: auto;
+    background-color: #000;
 }
